Refactor utility classes and improve test coverage